k8s_docs/Example_Manifest_Files/Deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-daemonset
spec:
  selector:
    matchLabels:
      app: my-daemon
  template:
    metadata:
      labels:
        app: my-daemon
    spec:
      containers:
        - name: my-daemon-container
          image: busybox
          command: [ "sh", "-c", "while true; do echo DaemonSet running; sleep 30; done" ]
