k8s_docs/Example_Manifest_Files/pod-c.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: network
  labels:
    app: pod-c
spec:
  containers:
  - name: pod-c
    image: curlimages/curl
    command: ["sleep", "3600"]
