k8s_docs/Example_Manifest_Files/ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  selector:
    app: myapp # this hsould match with label of pod
  ports:
    - port: 80
      targetPort: 8080
